# Orbit

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  AGENTS.md  README.md  design-qa-presenter-tools.md  design-qa.md  docker-compose.aws.yml  docker-compose.staging.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
services/python-worker/: pyproject.toml
services/python-worker/app/: challenge_qna.py  config.py  extraction.py  focused_practice.py  main.py  pptx_import.py  pronunciation.py  references.py  rehearsal.py  semantic_rehearsal.py  slide_context.py  slide_practice_coaching.py  slide_question_guides.py  slide_question_web_research.py  structured_logging.py
services/python-worker/scripts/: run_motion_planner_eval.py
services/python-worker/tests/: test_activity_export.py  test_audio_clip.py  test_audio_transcribe.py  test_authored_element_rasterizer.py  test_challenge_qna.py  test_color_customization.py  test_composition_library.py  test_config.py  test_content_fact_quality.py  test_deck_generation_stage_boundaries.py  test_deck_pptx_export.py  test_design_agent.py  test_design_program.py  test_extract_api.py  test_focused_practice.py  test_generate_deck_contract.py  test_generate_deck_facade.py  test_health.py  test_motion_compiler.py  test_motion_compiler_v3.py  test_motion_eligibility.py  test_motion_extractor.py  test_motion_golden.py  test_motion_library.py  test_motion_merge.py  test_motion_merge_v3.py  test_pptx_import.py  (+48 more)
(+2198 files in other folders)
