[project]
name = "orbit-python-worker"
version = "0.1.0"
description = "ORBIT FastAPI worker for document, speech, and AI helper tasks"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.86.0",
  "pydantic>=2.11.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0"
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
